--- a/src/skins/CustomButtonWhite.mxml
+++ b/src/skins/CustomButtonWhite.mxml
@@ -41,53 +41,53 @@ in accordance with the terms of the license agreement accompanying it.
 	</fx:Metadata>
 	
 	<fx:Script fb:purpose="styling">
-		<![CDATA[         
-			import spark.components.Group;
-			/* Define the skin elements that should not be colorized. 
-			For button, the graphics are colorized but the label is not. */
-			static private const exclusions:Array = ["labelDisplay"];
-			
-			/** 
-			 * @private
-			 */     
-			override public function get colorizeExclusions():Array {return exclusions;}
-			
-			/**
-			 * @private
-			 */
-			override protected function initializationComplete():void
-			{
-				useChromeColor = true;
-				super.initializationComplete();
-			}  
-			
-			/**
-			 *  @private
-			 */
-			override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number) : void
-			{
-				var cr:Number = getStyle("cornerRadius");
-				
-				/*if (cornerRadius != cr)
-				{
-					cornerRadius = cr;
-					shadow.radiusX = cornerRadius;
-					fill.radiusX = cornerRadius;
-					lowlight.radiusX = cornerRadius;
-					highlight.radiusX = cornerRadius;
-					border.radiusX = cornerRadius;
-				}
-				
-				if (highlightStroke) highlightStroke.radiusX = cornerRadius;
-				if (hldownstroke1) hldownstroke1.radiusX = cornerRadius;
-				if (hldownstroke2) hldownstroke2.radiusX = cornerRadius;*/
-				
-				super.updateDisplayList(unscaledWidth, unscaledHeight);
-			}
-			
-			private var cornerRadius:Number = 2;
-			
-		]]>        
+		<![CDATA[
+        import com.alfo.res.Resource;
+
+        /* Define the skin elements that should not be colorized.
+         For button, the graphics are colorized but the label is not. */
+        static private const exclusions:Array = ["labelDisplay"];
+
+        /**
+         * @private
+         */
+        override public function get colorizeExclusions():Array {
+            return exclusions;
+        }
+
+        /**
+         * @private
+         */
+        override protected function initializationComplete():void {
+            useChromeColor = true;
+            super.initializationComplete();
+        }
+
+        /**
+         *  @private
+         */
+        override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number):void {
+            var cr:Number = getStyle("cornerRadius");
+
+            /*if (cornerRadius != cr)
+             {
+             cornerRadius = cr;
+             shadow.radiusX = cornerRadius;
+             fill.radiusX = cornerRadius;
+             lowlight.radiusX = cornerRadius;
+             highlight.radiusX = cornerRadius;
+             border.radiusX = cornerRadius;
+             }
+
+             if (highlightStroke) highlightStroke.radiusX = cornerRadius;
+             if (hldownstroke1) hldownstroke1.radiusX = cornerRadius;
+             if (hldownstroke2) hldownstroke2.radiusX = cornerRadius;*/
+
+            super.updateDisplayList(unscaledWidth, unscaledHeight);
+        }
+
+        private var cornerRadius:Number = 2;
+        ]]>
 	</fx:Script>
 	
 	<!-- states -->
@@ -114,7 +114,7 @@ in accordance with the terms of the license agreement accompanying it.
 			 color="0xFFFFFF">
 	</s:Label>
 		<s:Spacer width="5" />
-		<s:BitmapImage source="@Embed('/assets/images/button/button_normal.png')" includeIn="down"  />
-		<s:BitmapImage source="@Embed('/assets/images/button/button_pressed.png')" includeIn="up,disabled" />
+		<s:BitmapImage source="{Resource.BUTTON_NORMAL}" includeIn="down"  />
+		<s:BitmapImage source="{Resource.BUTTON_PRESSED}" includeIn="up,disabled" />
 	</s:HGroup>
 </s:SparkButtonSkin>
