--- a/src/views/TaskCompleteCapture.mxml
+++ b/src/views/TaskCompleteCapture.mxml
@@ -1,133 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
-		xmlns:s="library://ns.adobe.com/flex/spark" creationComplete="onAddToStage(event)" skinClass="skins.BarView"
-		 xmlns:components="views.components.*"  >
-	
-	<fx:Script>
+        xmlns:s="library://ns.adobe.com/flex/spark" creationComplete="onAddToStage(event)" skinClass="skins.BarView">
+
+    <fx:Script>
 		<![CDATA[
-			import com.alfo.utils.EncryptWrapper;
-			import com.lia.crypto.AES;
-			
-			import events.KioskError;
-			import events.KioskProgressEvent;
-			import events.ViewEvent;
-			
-			import model.ML;
-			
-			import mx.events.FlexEvent;
-			import mx.managers.PopUpManager;
-			import mx.rpc.events.FaultEvent;
-			import mx.rpc.events.ResultEvent;
-			
-			import views.components.*;
-			
-			private var urlRequest:URLRequest
-			private var file:File;
-			
-			private var currentURN:String;
-			
-			private var progressPop:ProgressPopUp;
-			protected var fileTransfer:Boolean=false;
-			
-			[Bindable]
-			public var activitytitle:String ="Helmet Challenge";
-			
-			[Bindable]
-			public var userName:String="";
-			
-			[Bindable]
-			public var posts:int = 0;
-			
-			protected var applicationType:int = 0;
-			protected function onAddToStage(event:Event):void
-			{
-				
-				if (data!=null)
-				{
-					currentURN = data.urn;
-					applicationType = data.type;
-					activitytitle = data.activitytitle;
-					
-					this.currentState = data.facebook ? "facebook" : "default";
+        import com.alfo.utils.EncryptWrapper;
 
-					var passVars:Object=new Object;
-					passVars.urn=EncryptWrapper.Wrap(currentURN);
-					
-					// LOOK-UP USER INFO FOR THIS URN
-					getUser.send(passVars);
-					fileTransfer=false;
-				} else {
-					trace("URN MISSING");
-				}					
-				
-			}
-			
-			protected function getUser_resultHandler(event:ResultEvent):void
-			{
-				userName =EncryptWrapper.Wrap(getUser.lastResult.name);
-				posts = int(EncryptWrapper.Wrap(getUser.lastResult.posts));
-				if (this.currentState=="facebook")
-					facebookposts_check.selected = this.canPost;
-				trace("** USER INFO RETRIVED:\nUser's lastname:"+userName+"\nPosts:"+posts);
-			}
-			
-			protected function httpservice_faultHandler(event:FaultEvent):void
-			{
-				this.navigator.dispatchEvent(new KioskError(KioskError.ERROR, event.fault.faultString, "NETWORK ERROR"));
+        import events.KioskError;
+        import events.KioskProgressEvent;
+        import events.ViewEvent;
 
-			}
-			
-// SCORE HANDLING
-			protected function publishBTN_clickHandler(event:MouseEvent):void
-			{
-				var passVars:Object=new Object();
-				
-					passVars.urn=EncryptWrapper.Wrap(currentURN);
-					if (this.currentState=="facebook")
-						passVars.facebook_optin= this.facebookposts_check.selected ? 1 : 0;
-					else
-						passVars.facebook_optin= 0;
-					passVars.type = this.applicationType;
-					
-					publishData.send(passVars);
-					this.navigator.dispatchEvent( new KioskProgressEvent(KioskProgressEvent.NOTIFY, "Publishing Score" ) );
-			}
-			
-			protected function publish_resultHandler(event:ResultEvent):void
-			{
-				this.navigator.dispatchEvent( new KioskProgressEvent(KioskProgressEvent.UPDATE_COMPLETE ) );
-				
-				if(publishData.lastResult.result!="SUCCESS") 
-				{
-					
-					this.navigator.dispatchEvent(new KioskError(KioskError.ERROR, publishData.lastResult.message, "ERROR"));
-				} else {
-					checkForEnd();
-				}
-			}
+        import mx.rpc.events.FaultEvent;
+        import mx.rpc.events.ResultEvent;
 
-			protected function checkForEnd():void
-			{
-						this.navigator.dispatchEvent( new ViewEvent( ViewEvent.LOCATION_GAME_COMPLETE ) );
-			}
-			
-			
-			public function restart(e:Event):void
-			{
-				this.navigator.dispatchEvent( new ViewEvent( ViewEvent.LOCATION_RESTART ) );
-			}
-			
-			
-			protected function cancelBTN_clickHandler(event:MouseEvent):void
-			{
-				this.navigator.dispatchEvent( new ViewEvent( ViewEvent.LOCATION_RESTART ));
-			}
-			protected function get canPost():Boolean
-			{
-				
-				return (int(posts)<5);
-			}
-		]]>
+        import views.components.*;
+
+        private var urlRequest:URLRequest
+        private var file:File;
+
+        private var currentURN:String;
+
+        private var progressPop:ProgressPopUp;
+        protected var fileTransfer:Boolean = false;
+
+        [Bindable]
+        public var activitytitle:String = "Helmet Challenge";
+
+        [Bindable]
+        public var userName:String = "";
+
+        [Bindable]
+        public var posts:int = 0;
+
+        protected var applicationType:int = 0;
+
+        protected function onAddToStage(event:Event):void {
+
+            if (data != null) {
+                currentURN = data.urn;
+                applicationType = data.type;
+                activitytitle = data.activitytitle;
+
+                this.currentState = data.facebook ? "facebook" : "default";
+
+                var passVars:Object = new Object;
+                passVars.urn = EncryptWrapper.Wrap(currentURN);
+
+                // LOOK-UP USER INFO FOR THIS URN
+                getUser.send(passVars);
+                fileTransfer = false;
+            } else {
+                trace("URN MISSING");
+            }
+
+        }
+
+        protected function getUser_resultHandler(event:ResultEvent):void {
+            userName = EncryptWrapper.Wrap(getUser.lastResult.name);
+            posts = int(EncryptWrapper.Wrap(getUser.lastResult.posts));
+            if (this.currentState == "facebook")
+                facebookposts_check.selected = this.canPost;
+            trace("** USER INFO RETRIVED:\nUser's lastname:" + userName + "\nPosts:" + posts);
+        }
+
+        protected function httpservice_faultHandler(event:FaultEvent):void {
+            this.navigator.dispatchEvent(new KioskError(KioskError.ERROR, event.fault.faultString, "NETWORK ERROR"));
+
+        }
+
+        // SCORE HANDLING
+        protected function publishBTN_clickHandler(event:MouseEvent):void {
+            var passVars:Object = new Object();
+
+            passVars.urn = EncryptWrapper.Wrap(currentURN);
+            if (this.currentState == "facebook")
+                passVars.facebook_optin = this.facebookposts_check.selected ? 1 : 0;
+            else
+                passVars.facebook_optin = 0;
+            passVars.type = this.applicationType;
+
+            publishData.send(passVars);
+            this.navigator.dispatchEvent(new KioskProgressEvent(KioskProgressEvent.NOTIFY, "Publishing Score"));
+        }
+
+        protected function publish_resultHandler(event:ResultEvent):void {
+            this.navigator.dispatchEvent(new KioskProgressEvent(KioskProgressEvent.UPDATE_COMPLETE));
+
+            if (publishData.lastResult.result != "SUCCESS") {
+
+                this.navigator.dispatchEvent(new KioskError(KioskError.ERROR, publishData.lastResult.message, "ERROR"));
+            } else {
+                checkForEnd();
+            }
+        }
+
+        protected function checkForEnd():void {
+            this.navigator.dispatchEvent(new ViewEvent(ViewEvent.LOCATION_GAME_COMPLETE));
+        }
+
+
+        public function restart(e:Event):void {
+            this.navigator.dispatchEvent(new ViewEvent(ViewEvent.LOCATION_RESTART));
+        }
+
+
+        protected function cancelBTN_clickHandler(event:MouseEvent):void {
+            this.navigator.dispatchEvent(new ViewEvent(ViewEvent.LOCATION_RESTART));
+        }
+
+        protected function get canPost():Boolean {
+
+            return (int(posts) < 5);
+        }
+        ]]>
 	</fx:Script>
 	
 	<fx:Declarations>
