--- a/src/skins/barTitleWindow.mxml
+++ b/src/skins/barTitleWindow.mxml
@@ -36,103 +36,95 @@
     
     <fx:Script fb:purpose="styling">
         <![CDATA[
-		import mx.core.FlexVersion;
-		
-		/* Define the skin elements that should not be colorized. 
-        For panel, border and title background are skinned, but the content area, background, border, and title text are not. */
+        import mx.core.FlexVersion;
+
+        /* Define the skin elements that should not be colorized.
+         For panel, border and title background are skinned, but the content area, background, border, and title text are not. */
         static private const exclusions:Array = ["background", "titleDisplay", "contentGroup", "border"];
-		
-		/* exclusions before Flex 4.5 for backwards-compatibility purposes */
-		static private const exclusions_4_0:Array = ["background", "titleDisplay", "contentGroup"];
-		
-		/**
-		 * @private
-		 */
-		override public function get colorizeExclusions():Array 
-		{
-			// Since border is styleable via borderColor, no need to allow chromeColor to affect
-			// the border.  This is wrapped in a compatibility flag since this change was added  
-			// in Flex 4.5
-			if (FlexVersion.compatibilityVersion < FlexVersion.VERSION_4_5)
-			{
-				return exclusions_4_0;
-			}
-			
-			return exclusions;
-		}
-        
+
+        /* exclusions before Flex 4.5 for backwards-compatibility purposes */
+        static private const exclusions_4_0:Array = ["background", "titleDisplay", "contentGroup"];
+
         /**
          * @private
          */
-        override protected function initializationComplete():void
-        {
+        override public function get colorizeExclusions():Array {
+            // Since border is styleable via borderColor, no need to allow chromeColor to affect
+            // the border.  This is wrapped in a compatibility flag since this change was added
+            // in Flex 4.5
+            if (FlexVersion.compatibilityVersion < FlexVersion.VERSION_4_5) {
+                return exclusions_4_0;
+            }
+
+            return exclusions;
+        }
+
+        /**
+         * @private
+         */
+        override protected function initializationComplete():void {
             useChromeColor = true;
             super.initializationComplete();
         }
-        
+
         /**
          * @private
          */
-        override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number):void
-        {
-            if (getStyle("borderVisible") == true)
-            {
+        override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number):void {
+            if (getStyle("borderVisible") == true) {
                 border.visible = true;
                 background.left = background.top = background.right = background.bottom = 1;
                 contents.left = contents.top = contents.right = contents.bottom = 1;
             }
-            else
-            {
+            else {
                 border.visible = false;
                 background.left = background.top = background.right = background.bottom = 0;
                 contents.left = contents.top = contents.right = contents.bottom = 0;
             }
-            
+
             dropShadow.visible = getStyle("dropShadowVisible");
-            
+
             var cr:Number = getStyle("cornerRadius");
-            var withControls:Boolean = 
-                (currentState == "disabledWithControlBar" || 
-                 currentState == "normalWithControlBar" ||
-                 currentState == "inactiveWithControlBar");
-            
-            if (cornerRadius != cr)
-            {
+            var withControls:Boolean =
+                    (currentState == "disabledWithControlBar" ||
+                            currentState == "normalWithControlBar" ||
+                            currentState == "inactiveWithControlBar");
+
+            if (cornerRadius != cr) {
                 cornerRadius = cr;
-                
+
                 dropShadow.tlRadius = cornerRadius;
                 dropShadow.trRadius = cornerRadius;
                 dropShadow.blRadius = withControls ? cornerRadius : 0;
                 dropShadow.brRadius = withControls ? cornerRadius : 0;
-                
-                setPartCornerRadii(topMaskRect, withControls); 
-                setPartCornerRadii(border, withControls); 
+
+                setPartCornerRadii(topMaskRect, withControls);
+                setPartCornerRadii(border, withControls);
                 setPartCornerRadii(background, withControls);
             }
-            
-            if (bottomMaskRect) setPartCornerRadii(bottomMaskRect, withControls); 
-            
+
+            if (bottomMaskRect) setPartCornerRadii(bottomMaskRect, withControls);
+
             borderStroke.color = getStyle("borderColor");
             borderStroke.alpha = getStyle("borderAlpha");
             backgroundFill.color = getStyle("backgroundColor");
             backgroundFill.alpha = getStyle("backgroundAlpha");
-            
+
             super.updateDisplayList(unscaledWidth, unscaledHeight);
         }
-        
+
         /**
          * @private
-         */  
-        private function setPartCornerRadii(target:Rect, includeBottom:Boolean):void
-        {            
+         */
+        private function setPartCornerRadii(target:Rect, includeBottom:Boolean):void {
             target.topLeftRadiusX = cornerRadius;
             target.topRightRadiusX = cornerRadius;
             target.bottomLeftRadiusX = includeBottom ? cornerRadius : 0;
             target.bottomRightRadiusX = includeBottom ? cornerRadius : 0;
         }
-        
+
         private var cornerRadius:Number;
-		]]>
+        ]]>
     </fx:Script>
     
     <s:states>
