--- a/src/views/QuickLogOut.mxml
+++ b/src/views/QuickLogOut.mxml
@@ -5,19 +5,21 @@
 		>
 	<fx:Script>
 		<![CDATA[
-			import mx.events.FlexEvent;
-			import model.Config;
-			
-			protected function view1_creationCompleteHandler(event:FlexEvent):void
-			{
-				
-				var webView:StageWebView = new StageWebView();
-				webView.stage = stage;
-				webView.viewPort = new Rectangle(0,0,0,0);				
-				webView.loadURL("https://www.facebook.com/logout.php?access_token="+Config.access_token+"&confirm=1&next="+Config.logout);
-				webView.addEventListener(LocationChangeEvent.LOCATION_CHANGE, function():void { webView.dispose(); trace("**********************************************logged out");});
-			}
-			
-		]]> 
+        import model.Config;
+
+        import mx.events.FlexEvent;
+
+        protected function view1_creationCompleteHandler(event:FlexEvent):void {
+
+            var webView:StageWebView = new StageWebView();
+            webView.stage = stage;
+            webView.viewPort = new Rectangle(0, 0, 0, 0);
+            webView.loadURL("https://www.facebook.com/logout.php?access_token=" + Config.access_token + "&confirm=1&next=" + Config.logout);
+            webView.addEventListener(LocationChangeEvent.LOCATION_CHANGE, function ():void {
+                webView.dispose();
+                trace("**********************************************logged out");
+            });
+        }
+        ]]>
 	</fx:Script>	
 </s:View>
