--- a/src/views/UserForm.mxml
+++ b/src/views/UserForm.mxml
@@ -6,135 +6,126 @@
 		removedFromStage="removed(event)" backgroundColor="#000000">
 	<fx:Script>
 		<![CDATA[
-			import com.alfo.DelayedExecution;
-			import com.alfo.UserObject;
-			
-			import mx.rpc.events.FaultEvent;
-			import mx.rpc.events.ResultEvent;
-			import mx.validators.Validator;
-			
-			import events.KioskError;
-			import events.UserEvent;
-			import events.UserObjectEvent;
-			import events.ViewEvent;
-			
-			import com.alfo.res.Resource;
-			
-			[Bindable]
-			protected var validatorArr:Array;
-			
-			protected var currentURN:String;
-			public var optin_marketing:Boolean;
-			public var optin_terms:Boolean;
-			
-			private var theUser:UserObject;
-			
-			protected function onAddedToStage(e:Event=null):void
-			{
-				theUser=UserObject.getInstance();
-				this.navigator.addEventListener(UserObjectEvent.STATUS_CHANGE,checkNetStatus);
-				theUser.facebook=false;
-				
-				
-				if (data!=null)
-				{
-					this.currentURN = data.urn;
-					optin_marketing = data.optin_marketing;
-					optin_terms = data.optin_terms;
-					
-				} else
-				{
-					trace("NO CURRENT URN");
-				}
-				validatorArr = new Array();
-				validatorArr.push(validateName);
-				validatorArr.push(validateSurname);
-				validatorArr.push(validateEmail);
-				var tempo:DelayedExecution=new  DelayedExecution(1500,this,focusText);
-			}
-			protected function focusText() {
-				//userFirstName.setFocus();
-			}
-			protected function submit(event:MouseEvent=null):void 
-			{
-				trace("submit form");
-				theUser.isBatch=false;
-				var validatorErrorArray:Array = Validator.validateAll(validatorArr);
-				var isValidForm:Boolean = validatorErrorArray.length == 0;
-				if (isValidForm) 
-				{
-					theUser.firstname=userFirstName.text;
-					theUser.lastname=userLastName.text;
-					theUser.email=userEmail.text;
-					theUser.mobile=userMobile.text;
-					
-					if(theUser.isConnected) {
-					saveData.send({urn: this.currentURN, 
-						firstname:userFirstName.text, lastname: userLastName.text, mobile:userMobile.text, current_location:theUser.current_location,
-						email: userEmail.text, extraterms: theUser.extraterms ? 1 : 0 });
-					} else {
-						goBatch();
-					}
-					//	save();
-				} 
-			}
-			
-			
-			protected function clearForm():void
-			{
-				userEmail.text="";
-				userEmail.errorString="";
-				userFirstName.text="";
-				userFirstName.errorString="";
-				userLastName.text="";
-				userLastName.errorString="";
-				userMobile.text = "";
-				userMobile.errorString = "";
-				//this.navigator.dispatchEvent( new ViewEvent( ViewEvent.LOCATION_RESTART ));
-				
-			}
-			
-			
-			protected function save(e:ResultEvent=null):void
-			{
-				// -> Do we need to send an isRegistered? We should divide Facebook and Direct registration perhaps
-				if (e.result.result=="OK")
-				{
-					theUser.isBatch=false;
-					this.navigator.dispatchEvent( new UserEvent(UserEvent.REGISTERED, "classic"));
-					this.navigator.dispatchEvent( new ViewEvent( ViewEvent.LOCATION_NON_FACEBOOK_REGISTERED ) );
-				} else
-				{
-					this.navigator.dispatchEvent(new KioskError(KioskError.ERROR, e.result.message.toString(), "COMMUNICATION ERROR"));
-					
-				}
-			}
-			protected function error(e:FaultEvent):void
-			{
-				//this.navigator.dispatchEvent(new KioskError(KioskError.MODAL, e.fault.message.toString(), "COMMUNICATION ERROR",goBatch,submit));
-				goBatch();
-			}
+        import com.alfo.DelayedExecution;
+        import com.alfo.UserObject;
+        import com.alfo.res.Resource;
 
-			protected function goBatch(e:Event=null) {
-				theUser.isBatch=true;
-				this.navigator.dispatchEvent( new UserEvent(UserEvent.REGISTERED, "classic"));
-				this.navigator.dispatchEvent( new ViewEvent( ViewEvent.LOCATION_NON_FACEBOOK_REGISTERED ) );
-			}
-			
-			
-			protected function removed(event:Event):void
-			{
-				trace("end of registration");
-				this.navigator.removeEventListener(UserObjectEvent.STATUS_CHANGE,checkNetStatus);
-				
-			}
-			protected function checkNetStatus(e:UserObjectEvent) {
-				if(e.netStatus) {
-				} else {
-				}
-			}
-			
-		]]>
+        import events.KioskError;
+        import events.UserEvent;
+        import events.UserObjectEvent;
+        import events.ViewEvent;
+
+        import mx.rpc.events.FaultEvent;
+        import mx.rpc.events.ResultEvent;
+        import mx.validators.Validator;
+
+        [Bindable]
+        protected var validatorArr:Array;
+
+        protected var currentURN:String;
+        public var optin_marketing:Boolean;
+        public var optin_terms:Boolean;
+
+        private var theUser:UserObject;
+
+        protected function onAddedToStage(e:Event = null):void {
+            theUser = UserObject.getInstance();
+            this.navigator.addEventListener(UserObjectEvent.STATUS_CHANGE, checkNetStatus);
+            theUser.facebook = false;
+
+
+            if (data != null) {
+                this.currentURN = data.urn;
+                optin_marketing = data.optin_marketing;
+                optin_terms = data.optin_terms;
+
+            } else {
+                trace("NO CURRENT URN");
+            }
+            validatorArr = new Array();
+            validatorArr.push(validateName);
+            validatorArr.push(validateSurname);
+            validatorArr.push(validateEmail);
+            var tempo:DelayedExecution = new DelayedExecution(1500, this, focusText);
+        }
+
+        protected function focusText():void {
+            //userFirstName.setFocus();
+        }
+
+        protected function submit(event:MouseEvent = null):void {
+            trace("submit form");
+            theUser.isBatch = false;
+            var validatorErrorArray:Array = Validator.validateAll(validatorArr);
+            var isValidForm:Boolean = validatorErrorArray.length == 0;
+            if (isValidForm) {
+                theUser.firstname = userFirstName.text;
+                theUser.lastname = userLastName.text;
+                theUser.email = userEmail.text;
+                theUser.mobile = userMobile.text;
+
+                if (theUser.isConnected) {
+                    saveData.send({urn: this.currentURN,
+                        firstname: userFirstName.text, lastname: userLastName.text, mobile: userMobile.text, current_location: theUser.current_location,
+                        email: userEmail.text, extraterms: theUser.extraterms ? 1 : 0 });
+                } else {
+                    goBatch();
+                }
+                //	save();
+            }
+        }
+
+
+        protected function clearForm():void {
+            userEmail.text = "";
+            userEmail.errorString = "";
+            userFirstName.text = "";
+            userFirstName.errorString = "";
+            userLastName.text = "";
+            userLastName.errorString = "";
+            userMobile.text = "";
+            userMobile.errorString = "";
+            //this.navigator.dispatchEvent( new ViewEvent( ViewEvent.LOCATION_RESTART ));
+
+        }
+
+
+        protected function save(e:ResultEvent = null):void {
+            // -> Do we need to send an isRegistered? We should divide Facebook and Direct registration perhaps
+            if (e.result.result == "OK") {
+                theUser.isBatch = false;
+                this.navigator.dispatchEvent(new UserEvent(UserEvent.REGISTERED, "classic"));
+                this.navigator.dispatchEvent(new ViewEvent(ViewEvent.LOCATION_NON_FACEBOOK_REGISTERED));
+            } else {
+                this.navigator.dispatchEvent(new KioskError(KioskError.ERROR, e.result.message.toString(), "COMMUNICATION ERROR"));
+
+            }
+        }
+
+        protected function error(e:FaultEvent):void {
+            //this.navigator.dispatchEvent(new KioskError(KioskError.MODAL, e.fault.message.toString(), "COMMUNICATION ERROR",goBatch,submit));
+            goBatch();
+        }
+
+        protected function goBatch(e:Event = null) {
+            theUser.isBatch = true;
+            this.navigator.dispatchEvent(new UserEvent(UserEvent.REGISTERED, "classic"));
+            this.navigator.dispatchEvent(new ViewEvent(ViewEvent.LOCATION_NON_FACEBOOK_REGISTERED));
+        }
+
+
+        protected function removed(event:Event):void {
+            trace("end of registration");
+            this.navigator.removeEventListener(UserObjectEvent.STATUS_CHANGE, checkNetStatus);
+
+        }
+
+        protected function checkNetStatus(e:UserObjectEvent):void {
+            if (e.netStatus) {
+            } else {
+            }
+        }
+        ]]>
 	</fx:Script>
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
