--- a/src/views/components/ErrorAlert.mxml
+++ b/src/views/components/ErrorAlert.mxml
@@ -1,42 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="600" height="300" added="onAdded()" remove="exit()">
-	<fx:Script>
+<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+         xmlns:s="library://ns.adobe.com/flex/spark"
+         width="600" height="300" added="onAdded()" remove="exit()">
+    <fx:Script>
 		<![CDATA[
-			import mx.events.FlexEvent;
-			import mx.managers.PopUpManager;
-			
-			
-			protected var isremoving:Boolean = false;
-			
-			[Bindable]
-			public var message:String="";
-			
-			[Bindable]
-			public var windowTitle:String="I/O ERROR:";
-			
-			[Bindable]
-			public var exitFunction:Function = null;
-			
-			protected function onAdded(e:FlexEvent=null):void
-			{
-				isremoving = false;
-			}
+        import mx.events.FlexEvent;
+        import mx.managers.PopUpManager;
 
-			
-			protected function exit(e:FlexEvent=null):void
-			{
-				isremoving = true;
-				if (exitFunction!=null)
-					exitFunction(null);
-				
-			}
-			public function get isRemoving():Boolean
-			{
-				return isremoving;
-			}
-		]]>
+        protected var isremoving:Boolean = false;
+
+        [Bindable]
+        public var message:String = "";
+
+        [Bindable]
+        public var windowTitle:String = "I/O ERROR:";
+
+        [Bindable]
+        public var exitFunction:Function = null;
+
+        protected function onAdded(e:FlexEvent = null):void {
+            isremoving = false;
+        }
+
+
+        protected function exit(e:FlexEvent = null):void {
+            isremoving = true;
+            if (exitFunction != null)
+                exitFunction(null);
+
+        }
+
+        public function get isRemoving():Boolean {
+            return isremoving;
+        }
+        ]]>
 	</fx:Script>
 <fx:Metadata>
 	[Event(name="closeError", type="flash.events.Event")]
