--- a/src/views/components/MaskedTime.mxml
+++ b/src/views/components/MaskedTime.mxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:s="library://ns.adobe.com/flex/spark"
-		 xmlns:fx="http://ns.adobe.com/mxml/2009"
-		 xmlns:ai="http://ns.adobe.com/ai/2009"
-		 xmlns:d="http://ns.adobe.com/fxg/2008/dt"
-		 xmlns:flm="http://ns.adobe.com/flame/2008">
-	<fx:Script>
+         xmlns:fx="http://ns.adobe.com/mxml/2009">
+    <fx:Script>
 		<![CDATA[
 			[Bindable]
 			public var text = "";
