--- a/src/views/components/ProgressPopUp.mxml
+++ b/src/views/components/ProgressPopUp.mxml
@@ -1,10 +1,9 @@
 <?xml version="1.0"?>
 <!-- containers\spark\myComponents\MyLoginForm.mxml -->
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
-			   xmlns:mx="library://ns.adobe.com/flex/mx"
-			   xmlns:s="library://ns.adobe.com/flex/spark"
-			   width="578" height="259" remove="exit()" >
-	<s:layout>
+         xmlns:s="library://ns.adobe.com/flex/spark"
+         width="578" height="259" remove="exit()">
+    <s:layout>
 		<s:VerticalLayout/>
 	</s:layout>
 	<fx:Metadata>
@@ -14,42 +13,37 @@
 	
 	<fx:Script>
 		<![CDATA[
-			import model.ML;
-			
-			import mx.events.FlexEvent;
-			import mx.managers.PopUpManager;
-			
-				
-				
-			[Bindable]
-			public var message:String="Please Wait";
-			
-			[Bindable]
-			public var windowTitle:String="Please Wait";
-			
-			[Bindable]
-			public var exitFunction:Function = null;
-			
-			protected function exit(e:FlexEvent=null):void
-			{
-				if (exitFunction!=null)
-					exitFunction();
-				
-			}
-			
-				// Handle the close button and Cancel button.
-				private function handleCloseEvent():void {
-					PopUpManager.removePopUp(this);
-				}            
-				
-				// Handle the OK button.
-				private function processLogin():void {
-					// Check credentials (not shown) then remove pop up.
-					var eventObject:Event = new Event("closeError");
-					dispatchEvent(eventObject); 
-					PopUpManager.removePopUp(this);
-				}
-		]]>
+        import mx.events.FlexEvent;
+        import mx.managers.PopUpManager;
+
+        [Bindable]
+        public var message:String = "Please Wait";
+
+        [Bindable]
+        public var windowTitle:String = "Please Wait";
+
+        [Bindable]
+        public var exitFunction:Function = null;
+
+        protected function exit(e:FlexEvent = null):void {
+            if (exitFunction != null)
+                exitFunction();
+
+        }
+
+        // Handle the close button and Cancel button.
+        private function handleCloseEvent():void {
+            PopUpManager.removePopUp(this);
+        }
+
+        // Handle the OK button.
+        private function processLogin():void {
+            // Check credentials (not shown) then remove pop up.
+            var eventObject:Event = new Event("closeError");
+            dispatchEvent(eventObject);
+            PopUpManager.removePopUp(this);
+        }
+        ]]>
 	</fx:Script>
 	<s:Group>
 		
