--- a/src/views/components/tandcWindow.mxml
+++ b/src/views/components/tandcWindow.mxml
@@ -1,83 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- http://blog.flexexamples.com/2009/10/23/displaying-a-popup-spark-titlewindow-container-in-flex-4/ -->
 <s:VGroup name="tandcWindow"
-		  xmlns:fx="http://ns.adobe.com/mxml/2009"
-		  xmlns:s="library://ns.adobe.com/flex/spark"
-		  xmlns:mx="library://ns.adobe.com/flex/halo"
-		  color="0xffffff"
-		  fontFamily="Font Rg"
-		  width="700" height="400"
-		  resize="group1_resizeHandler(event)"
-		  added="onAdded()"  
-		  remove="exit();" xmlns:controls="com.flexcapacitor.controls.*"  >
-	<fx:Script>
+          xmlns:fx="http://ns.adobe.com/mxml/2009"
+          xmlns:s="library://ns.adobe.com/flex/spark"
+          color="0xffffff"
+          fontFamily="Font Rg"
+          width="700" height="400"
+          resize="group1_resizeHandler(event)"
+          added="onAdded()"
+          remove="exit();" xmlns:controls="com.flexcapacitor.controls.*">
+    <fx:Script>
 		<![CDATA[
-			import flash.events.Event;
-			import flash.utils.clearInterval;
-			import flash.utils.setInterval;
-			
-			import mx.core.IFlexDisplayObject;
-			import mx.events.CloseEvent;
-			import mx.events.FlexEvent;
-			import mx.events.ResizeEvent;
-			import mx.managers.PopUpManager;
-			
-			
-			
-			protected var isremoving:Boolean = false;
-			[Bindable]
-			public var exitFunction:Function = null;
-			
-			private var tempo:Number;
-			
-			private var noBLink:Number;
-			
-			protected function onAdded(e:FlexEvent=null):void
-			{
-				isremoving = false;
-			}
-			
-			protected function exit(e:FlexEvent=null):void
-			{
-				trace("TERMS POPUP EXIT");
-				clearInterval(tempo);
-				isremoving = true;
-				
-				
-			}
-			public function get isRemoving():Boolean
-			{
-				return isremoving;
-			}
-			
-			protected function group1_resizeHandler(event:ResizeEvent):void
-			{
-				// TODO Auto-generated method stub
-				
-			}
-			
-			protected function tec_renderHandler(event:Event):void
-			{
-				// TODO Auto-generated method stub
-				
-			}
-			
-			protected function tec_resizeHandler(event:ResizeEvent):void
-			{
-				// TODO Auto-generated method stub
-				
-			}
-			
-			protected function image1_clickHandler(event:MouseEvent):void
-			{
-				// TODO Auto-generated method stub
-				PopUpManager.removePopUp(this);
-				trace("close window");
-				
-				
-			}
-			
-		]]>
+        import mx.core.IFlexDisplayObject;
+        import mx.events.CloseEvent;
+        import mx.events.FlexEvent;
+        import mx.events.ResizeEvent;
+        import mx.managers.PopUpManager;
+
+        protected var isremoving:Boolean = false;
+        [Bindable]
+        public var exitFunction:Function = null;
+
+        private var tempo:Number;
+
+        private var noBLink:Number;
+
+        protected function onAdded(e:FlexEvent = null):void {
+            isremoving = false;
+        }
+
+        protected function exit(e:FlexEvent = null):void {
+            trace("TERMS POPUP EXIT");
+            clearInterval(tempo);
+            isremoving = true;
+
+
+        }
+
+        public function get isRemoving():Boolean {
+            return isremoving;
+        }
+
+        protected function group1_resizeHandler(event:ResizeEvent):void {
+            // TODO Auto-generated method stub
+
+        }
+
+        protected function tec_renderHandler(event:Event):void {
+            // TODO Auto-generated method stub
+
+        }
+
+        protected function tec_resizeHandler(event:ResizeEvent):void {
+            // TODO Auto-generated method stub
+
+        }
+
+        protected function image1_clickHandler(event:MouseEvent):void {
+            // TODO Auto-generated method stub
+            PopUpManager.removePopUp(this);
+            trace("close window");
+
+
+        }
+        ]]>
 	</fx:Script>
 	
 	
@@ -164,7 +150,7 @@
 				//tec.source="http://www.ignitesocial.co.uk/nike/tandc.html";
 				tec.source=initialUrl;
 			}
-			private function showOff() {
+			private function showOff():void {
 				clearInterval(noBLink);
 				tec.visible=true;
 			}
